# sevenbelow-resources

./: .gitignore  .gitleaksignore  LICENSE  README.md
dataexpertio-2026-AI-Eng-Bootcamp/claude-code-homework/release-radar/: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
dataexpertio-2026-AI-Eng-Bootcamp/claude-code-homework/release-radar/.claude/: settings.json
dataexpertio-2026-AI-Eng-Bootcamp/claude-code-homework/release-radar/docs/: design-note.md  documentation-rationale.md
dataexpertio-2026-AI-Eng-Bootcamp/claude-code-homework/release-radar/guardrails/: base.py  chain.py  citation.py  insufficient_context.py  pii_redaction.py  schema_validation.py  schemas.py  uncertainty.py
dataexpertio-2026-AI-Eng-Bootcamp/claude-code-homework/release-radar/memory/: HANDOFF.md
dataexpertio-2026-AI-Eng-Bootcamp/claude-code-homework/release-radar/scripts/: gh_adapter.py  release_radar.py
dataexpertio-2026-AI-Eng-Bootcamp/claude-code-homework/release-radar/tests/: conftest.py  test_plan.sh
dataexpertio-2026-AI-Eng-Bootcamp/openclaw-week-4-homework/solution/: README.md  pyproject.toml
dataexpertio-2026-AI-Eng-Bootcamp/openclaw-week-4-homework/solution/evals/: __init__.py  dataset.py  evaluators.py  run_eval.py
dataexpertio-2026-AI-Eng-Bootcamp/openclaw-week-4-homework/solution/metrics/: after.json  before.json
dataexpertio-2026-AI-Eng-Bootcamp/openclaw-week-4-homework/solution/scripts/: capture_metrics.py  check-secrets.sh
dataexpertio-2026-AI-Eng-Bootcamp/openclaw-week-4-homework/solution/tests/: conftest.py  test_agent.py  test_classifier.py  (+3 more)
(+192 files in other folders)
