[project]
name = "release-radar"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that call external APIs (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
