[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-agent"
version = "0.1.0"
description = "OpenClaw Week 4 — hardened Chief-of-Staff agent"
requires-python = ">=3.10"
dependencies = [
  "langchain>=1.0",
  "langchain-anthropic>=0.3",
  "langsmith>=0.2",
  "pydantic>=2.9,<3",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-mock>=3.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
